--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
         </header>
 
         <main>
-            <body style="display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0;">
-                <img src="https://upload.wikimedia.org/wikipedia/en/2/2e/Official_JAMB_logo.png" 
-                     alt="Description of image" 
-                     style="width: 50%; height: auto; margin-left: 60px;">
+           <center>
+            <img src="https://upload.wikimedia.org/wikipedia/en/2/2e/Official_JAMB_logo.png" alt="Description of image" width="50%" height="50%">
+        </center>
             <section id="login">
                 <h4>CBT PRACTICE</h4>
+                <h5>English 2024</h5>
                 <input type="text" id="username" placeholder="Enter your name" required>
                 <button onclick="startQuiz()">Start Quiz</button>
             </section>
@@ -248,3 +248,4 @@
 
 </body>
 </html>
+
